--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -1,6 +1,7 @@
 .home {
     .home-profile {
         .home-title {
+            font-family: $special-font-family;
             font-weight: 500;
             font-size: 50px;
             padding-bottom: 2rem;
@@ -12,4 +13,12 @@
 .header-title {
     font-weight: 500;
     font-size: 1.9rem !important;
+}
+
+
+.page.archive {
+    @extend .home, [posts];
+    .summary .single-title {
+        text-align: left;
+    }
 }
