--- a/assets/css/_override.scss
+++ b/assets/css/_override.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Days+One&display=swap');
 
-$global-font-family: 'Quicksand', $global-font-family, sans-serif;
-$header-title-font-family: 'Days One', $global-font-family;
+$special-font-family: 'Quicksand', $global-font-family, sans-serif;
+$header-title-font-family: 'Days One', $special-font-family;
