--- a/themes/LoveIt-0.2.10/layouts/_default/summary.html
+++ b/themes/LoveIt-0.2.10/layouts/_default/summary.html
@@ -11,8 +11,8 @@
     {{- end -}}
     {{- with $image -}}
         <div class="featured-image-preview">
-            <a href="{{ $.RelPermalink }}">
-                {{- dict "Src" . "Title" $.Description "Resources" $.Resources | partial "plugin/image.html" -}}
+            <a href="{{ $.RelPermalink }}" title="{{ $.Title }}">
+                {{- dict "Src" . "Title" $.Title "Resources" $.Resources | partial "plugin/image.html" -}}
             </a>
         </div>
     {{- end -}}
