--- a/themes/LoveIt-0.2.10/layouts/taxonomy/list.html
+++ b/themes/LoveIt-0.2.10/layouts/taxonomy/list.html
@@ -18,26 +18,29 @@
 
         {{- /* Paginate */ -}}
         {{- if .Pages -}}
-            {{- $pages := .Pages.GroupByDate "2006" -}}
-            {{- with .Site.Params.list.paginate | default .Site.Params.paginate -}}
-                {{- $pages = $.Paginate $pages . -}}
-            {{- else -}}
-                {{- $pages = .Paginate $pages -}}
-            {{- end -}}
-            {{- range $pages.PageGroups -}}
-                <h3 class="group-title">{{ .Key }}</h3>
-                {{- range .Pages -}}
-                    <article class="archive-item">
-                        <a href="{{ .RelPermalink }}" class="archive-item-link">
-                            {{- .Title -}}
-                        </a>
-                        <span class="archive-item-date">
-                            {{- $.Site.Params.list.dateFormat | default "01-02" | .Date.Format -}}
-                        </span>
-                    </article>
+            {{- $pages := where .Pages "Params.list" "!=" false -}}
+            {{- $pages = $pages.GroupByDate "2006" -}}
+            {{- if $pages -}}
+                {{- with .Site.Params.list.paginate | default .Site.Params.paginate -}}
+                    {{- $pages = $.Paginate $pages . -}}
+                {{- else -}}
+                    {{- $pages = .Paginate $pages -}}
                 {{- end -}}
+                {{- range $pages.PageGroups -}}
+                    <h3 class="group-title">{{ .Key }}</h3>
+                    {{- range .Pages -}}
+                        <article class="archive-item">
+                            <a href="{{ .RelPermalink }}" class="archive-item-link">
+                                {{- .Title -}}
+                            </a>
+                            <span class="archive-item-date">
+                                {{- $.Site.Params.list.dateFormat | default "01-02" | .Date.Format -}}
+                            </span>
+                        </article>
+                    {{- end -}}
+                {{- end -}}
+                {{- partial "paginator.html" . -}}
             {{- end -}}
-            {{- partial "paginator.html" . -}}
         {{- end -}}
     </div>
 {{- end -}}
