--- a/themes/LoveIt-0.2.10/layouts/blog/single.html
+++ b/themes/LoveIt-0.2.10/layouts/blog/single.html
@@ -70,7 +70,7 @@
         {{- end -}}
         {{- with $image -}}
             <div class="featured-image">
-                {{- dict "Src" . "Title" $.Description "Resources" $.Resources | partial "plugin/image.html" -}}
+                {{- dict "Src" . "Title" $.Title "Resources" $.Resources | partial "plugin/image.html" -}}
             </div>
         {{- end -}}
 
