--- a/themes/LoveIt-0.2.10/layouts/blog/single.html
+++ b/themes/LoveIt-0.2.10/layouts/blog/single.html
@@ -1,4 +1,4 @@
-{{- define "title" }}{{ .Title }} - {{ .Site.Params.Blog.Title }}{{ end -}}
+{{- define "title" }}{{ .Title }} - TehGM's Blog{{ end -}}
 
 {{- define "content" -}}
     {{- $params := .Scratch.Get "params" -}}
