--- a/themes/LoveIt-0.2.10/assets/css/_page/_404.scss
+++ b/themes/LoveIt-0.2.10/assets/css/_page/_404.scss
@@ -3,4 +3,9 @@
   line-height: 3rem;
   @include transform(translateY(30vh));
   text-align: center;
+  @include link(false, false);
+
+  a {
+      cursor: pointer;
+  }
 }
