--- a/themes/LoveIt-0.2.10/layouts/404.html
+++ b/themes/LoveIt-0.2.10/layouts/404.html
@@ -4,16 +4,9 @@
 
 {{- define "content" -}}
     <div class="page" id="content-404">
-        <h1 id="error-emoji"></h1>
         <p class="error-text">
-            {{- T "pageNotFoundText" -}}&nbsp;
-            <a href="javascript:void(0);" title="{{ T `back` }}" onclick="window.history.back();"><i class="far fa-hand-point-left fa-fw"></i></a>
+            {{- T "pageNotFoundText" -}}
+            <div><a title="{{ T `back` }}" onclick="event.preventDefault(); window.history.back(); return false;">Go back <i class="fas fa-arrow-alt-circle-left fa-fw"></i></a></div>
         </p>
     </div>
-    <script type="text/javascript">
-        (function() {
-            var emojiArray = ['\\(o_o)/', '(˚Δ˚)b', '(^-^*)', '(≥o≤)', '(^_^)b', '(·_·)','(=\'X\'=)', '(>_<)', '(;-;)'];
-            document.getElementById('error-emoji').appendChild(document.createTextNode(emojiArray[Math.floor(Math.random() * emojiArray.length)]));
-        })();
-    </script>
 {{- end -}}
