Center images without caption as well

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -29,3 +29,8 @@
     font-style: unset;
     font-size: 1.15rem;
 }
+
+.single .content .lightgallery img {
+    margin: 0 auto;
+    display: block;
+}
