Added inline spoiler feature

--- a/themes/LoveIt-0.2.10/layouts/partials/function/content.html
+++ b/themes/LoveIt-0.2.10/layouts/partials/function/content.html
@@ -16,4 +16,6 @@
 
 {{- $content = partial "function/escape.html" $content -}}
 
+{{- $content = partial "function/spoiler.html" $content -}}
+
 {{- return $content -}}
