--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -36,7 +36,8 @@
 }
 
 
-/* spoiler */
+/*** SPOILERS ***/
+/* spoiler admonition */
 .single .content .admonition.spoiler {
     background-color: rgba(255,255,255,0.005);
     border-left-color: #5d5d5f;
@@ -52,5 +53,27 @@
 
     &.open .admonition-title {
         background-color: rgba(255,255,255,0.03);
+    }
+}
+
+/* spoiler text */
+:not(.admonition).spoiler {
+    transition: all .1s ease;
+    -webkit-transition: all .1s ease;
+
+    &.hidden {
+        border-radius: 3px;
+        cursor: pointer;
+        background-color: #202225;
+
+        &:hover {
+            background-color: rgba(255,255,255,0.03);
+        }
+
+        .text {
+            pointer-events: none;
+            opacity: 0;
+            cursor: pointer;
+        }
     }
 }
