--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -38,7 +38,7 @@
 
 /*** SPOILERS ***/
 /* spoiler admonition */
-.single .content .admonition.spoiler {
+.admonition.spoiler {
     background-color: rgba(255,255,255,0.005);
     border-left-color: #5d5d5f;
 
