Added /imo page description

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -35,6 +35,15 @@
     display: block;
 }
 
+.admonition-content > p {
+    &:first-child {
+        margin-top: 0;
+    }
+    &:last-child {
+        margin-bottom: 0;
+    }
+}
+
 
 /*** SPOILERS ***/
 /* spoiler admonition */
