Added golden star for iZombie

--- a/assets/css/shortcodes/testimonial.scss
+++ b/assets/css/shortcodes/testimonial.scss
@@ -32,5 +32,9 @@
         span + span {
             margin-left: 10px;
         }
+
+        span.golden {
+            color: goldenrod;
+        }
     }
 }
