--- a/themes/LoveIt-0.2.10/layouts/_default/summary.html
+++ b/themes/LoveIt-0.2.10/layouts/_default/summary.html
@@ -43,7 +43,7 @@
         {{- $categories := slice -}}
         {{- range .Params.categories -}}
             {{- $category := partialCached "function/path.html" . . | printf "/categories/%v" | $.Site.GetPage -}}
-            {{- $categories = $categories | append (printf `<a href="%v"><i class="far fa-folder fa-fw"></i>%v</a>` $category.RelPermalink $category.Title) -}}
+            {{- $categories = $categories | append (printf `<a href="%v"><i class="far fa-folder fa-fw"></i>%v</a>` $category.RelPermalink ( $category.Params.Name | default $category.Title )) -}}
         {{- end -}}
         {{- with delimit $categories "&nbsp;" -}}
             &nbsp;<span class="post-category">
