--- a/layouts/blog/section.html
+++ b/layouts/blog/section.html
@@ -10,25 +10,6 @@
         {{- if .Content -}}
             {{- dict "Content" .Content "Ruby" .Params.ruby "Fraction" .Params.fraction "Fontawesome" .Params.fontawesome | partial "function/content.html" | safeHTML -}}
         {{- end -}}
-        {{- /* Paginate */ -}}
-        {{- if .RegularPagesRecursive -}}
-            {{- $pages := where .RegularPagesRecursive "Type" "blog" -}}
-            {{- $pages = where $pages "Params.list" "!=" false -}}
-            {{- $pages = $pages.GroupByDate "2006" -}}
-            {{- if $pages -}}
-                {{- with .Site.Params.section.paginate | default .Site.Params.paginate -}}
-                    {{- $pages = $.Paginate $pages . -}}
-                {{- else -}}
-                    {{- $pages = .Paginate $pages -}}
-                {{- end -}}
-                {{- range $pages.PageGroups -}}
-                    <h3 class="group-title">{{ .Key }}</h3>
-                    {{- range .Pages -}}
-                        {{- .Render "summary" -}}
-                    {{- end -}}
-                {{- end -}}
-                {{- partial "paginator.html" . -}}
-            {{- end -}}
-        {{- end -}}
+        {{- partial "posts-list.html" . -}}
     </div>
 {{- end -}}
