Added special 5th star type

--- a/assets/css/shortcodes/testimonial.scss
+++ b/assets/css/shortcodes/testimonial.scss
@@ -36,5 +36,12 @@
         span.golden {
             color: goldenrod;
         }
+
+        .fa-stack {
+            font-size: 22px;
+            height: 2.3em;
+            line-height: 2.1em;
+            margin-left: 5px;
+        }
     }
 }
