--- a/layouts/shortcodes/testimonial.html
+++ b/layouts/shortcodes/testimonial.html
@@ -2,6 +2,7 @@
 {{- $image := .Get "image" | default .Site.Params.home.profile.avatarURL -}}
 {{- $imageAlt := .Get "imageAlt" | default "Avatar" -}}
 {{- $golden := or (.Get "gold") (.Get "golden") | default false -}}
+{{- $special := .Get "special" | default false -}}
 {{- $title := "" -}}
 {{- $stars := 0 -}}
 
@@ -29,6 +30,11 @@
                     {{- if or (lt $s $stars) (eq $s $stars) -}}
                         {{- if and ($golden) (eq $s $stars) -}}
                             <span class="fas fa-star golden"></span>
+                        {{- else if and ($special) (eq $s $stars) -}}
+                        <span class="fa-stack">
+                            <i class="far fa-star fa-stack-2x"></i>
+                            <i class="fas fa-star fa-stack-1x"></i>
+                        </span>
                         {{- else -}}
                             <span class="fas fa-star"></span>
                         {{- end -}}
