Make special turn into additional award symbol to further avoid confusion

--- a/assets/css/shortcodes/testimonial.scss
+++ b/assets/css/shortcodes/testimonial.scss
@@ -37,6 +37,10 @@
             color: goldenrod;
         }
 
+        span.fa-award {
+            color: darkgoldenrod;
+        }
+
         .fa-stack {
             font-size: 22px;
             height: 2.3em;
